# model/addjob.js
@@ -1,0 +1,24 @@
+const mongoose = require("mongoose");
+
+const empoleeSchema = new mongoose.Schema({
+  //
+  positionTitle: String,
+  hospital_Faculty: String,
+  speciality: String,
+  jod_duration: String,
+  hourlyRate: String,
+  shift: String,
+  from: Number,
+  to: Number,
+  startDate: String,
+  endDate: String,
+  description: String,
+  Date: String,
+  totalhours: Number,
+});
+
+//create geolocation
+
+const AddJob = new mongoose.model("AddJob", empoleeSchema);
+
+module.exports = AddJob;
